footer was added. Bug fixed on mobile menu

--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -1,6 +1,5 @@
 .article {
     background-color: $veryLightGray;
-    margin-bottom: 3.75rem;
     text-align: center;
 
     @include breakpoint-up(medium){
@@ -19,6 +18,8 @@
         background-color: $white;
         border-radius: 0.3125rem;
         overflow: hidden;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+        transition: all 150ms ease-in-out;
 
         @include breakpoint-up(medium){
             flex: 1 0 50%;
@@ -26,6 +27,10 @@
         @include breakpoint-up(large){
             max-width: 25%;
             flex: 1;
+        }
+
+        &:hover{
+            transform: scale(1.03);
         }
     }
 
