--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,6 +16,7 @@ body {
     color: $grayishBlue;
     font-family: 'Public Sans', sans-serif;
     min-height: 200vh;
+    overflow-x: hidden;
 
     @include breakpoint-up(large){
         font-size: $font-med;
@@ -99,7 +100,7 @@ a, a:visited, a:hover {
             padding-top: 6rem;
         }
     }
-    
+
     &--rt {
         padding-right: 1.5rem;
     }
