--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -92,6 +92,7 @@ body {
   color: #9698a6;
   font-family: 'Public Sans', sans-serif;
   min-height: 200vh;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
@@ -260,6 +261,11 @@ button:hover, .button:hover {
   .hide-for-desktop {
     display: none;
   }
+}
+
+.header {
+  position: relative;
+  z-index: 1;
 }
 
 .header.open .overlay {
@@ -556,7 +562,6 @@ button:hover, .button:hover {
 
 .article {
   background-color: #fafafa;
-  margin-bottom: 3.75rem;
   text-align: center;
 }
 
@@ -584,6 +589,10 @@ button:hover, .button:hover {
   background-color: white;
   border-radius: 0.3125rem;
   overflow: hidden;
+  -webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
 }
 
 @media (min-width: 40em) {
@@ -601,6 +610,11 @@ button:hover, .button:hover {
         -ms-flex: 1;
             flex: 1;
   }
+}
+
+.article__item:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 
 .article__image {
@@ -642,5 +656,145 @@ button:hover, .button:hover {
 
 .article__description {
   font-size: 0.8125rem;
+}
+
+.footer {
+  background-color: #2d314d;
+  color: white;
+  padding: 2.5rem;
+  text-align: center;
+  font-size: 1rem;
+}
+
+@media (min-width: 64em) {
+  .footer .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr 1fr 1fr 2fr;
+        grid-template-columns: 2fr 1fr 1fr 2fr;
+    -ms-grid-rows: 1fr auto;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
+  }
+}
+
+.footer a {
+  color: white;
+}
+
+.footer__logo img {
+  max-height: 2rem;
+}
+
+@media (max-width: 64.9375em) {
+  .footer__logo img {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__logo {
+    grid-area: logo;
+  }
+}
+
+@media (max-width: 64.9375em) {
+  .footer__social {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+  }
+}
+
+.footer__social a {
+  display: inline-block;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+
+.footer__social a:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.footer__social a:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.footer__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  line-height: 2rem;
+}
+
+@media (min-width: 64em) {
+  .footer__links {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col1 {
+    grid-area: links1;
+  }
+}
+
+@media (max-width: 64.9375em) {
+  .footer__links.col2 {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .footer__links.col2 {
+    grid-area: links2;
+  }
+}
+
+.footer__links a {
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+
+.footer__links a:hover {
+  color: #31d35c;
+}
+
+@media (min-width: 64em) {
+  .footer__cta {
+    grid-area: cta;
+    text-align: right;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
+@media (max-width: 64.9375em) {
+  .footer__cta a.button {
+    margin-bottom: 1.875rem;
+  }
+}
+
+.footer__copyright {
+  margin-top: 1rem;
+  color: #f3f4f6;
+  text-align: right;
+}
+
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+  }
 }
 /*# sourceMappingURL=style.css.map */
